--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>📚 EduHub: CNUB Balamban</h1>
+    <h1>📚 EduHub: CNU Balamban</h1>
     <p>Share your notes. Help your peers. Study smarter. ❤️💛</p>
   </header>
 
@@ -40,7 +40,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 CNUB Education Council – EduHub Balamban ❤️💛 | Powered by OpenAI</p>
+    <p>&copy; 2025 CNUB Education Council – EduHub Balamban | Powered by OpenAI</p>
   </footer>
 
   <script>
