--- a/index.html
+++ b/index.html
@@ -12,6 +12,65 @@
     <p>Share your notes. Help your peers. Study smarter. ❤️💛</p>
   </header>
 
+<section id="about">
+    <h2>🏛️ About the Organization</h2>
+    <p><strong>Name:</strong> [Your Org Name]</p>
+    <p><strong>Founded:</strong> [Year]</p>
+    <p><strong>Background:</strong> [Brief history of the org]</p>
+    <p><strong>Mission:</strong> [Your mission statement]</p>
+    <p><strong>Vision:</strong> [Your vision statement]</p>
+    <p><strong>Core Values:</strong> [Optional values]</p>
+  </section>
+
+  <section id="officers">
+    <h2>👥 Meet the Officers</h2>
+    <ul>
+      <li><strong>📛 Name:</strong> Officer 1<br>📌 Position: President<br>📅 Term: 2024–2025<br>✉️ Email: officer1@example.com</li>
+      <li><strong>📛 Name:</strong> Officer 2<br>📌 Position: Vice President<br>📅 Term: 2024–2025<br>✉️ Email: officer2@example.com</li>
+    </ul>
+  </section>
+
+  <section id="activities">
+    <h2>🧭 What We Do</h2>
+    <p>We organize regular events such as Pinning Ceremonies, Outreach Programs, and Professional Trainings. We also manage student resources and peer tutoring efforts.</p>
+  </section>
+
+  <section id="announcements">
+    <h2>📅 Announcements & Events</h2>
+    <ul>
+      <li>📣 Submission Deadline for Notes: July 15, 2025</li>
+      <li>🏆 Top Contributor for June: John Doe</li>
+      <li>📅 Upcoming Event: Study Jam - July 20, 2025</li>
+    </ul>
+  </section>
+
+  <section id="faq">
+    <h2>🧩 FAQs</h2>
+    <ul>
+      <li><strong>Q:</strong> Who can upload notes?<br><strong>A:</strong> Any student of the organization.</li>
+      <li><strong>Q:</strong> Can teachers access this?<br><strong>A:</strong> Yes, teachers can view and edit student-generated quizzes.</li>
+      <li><strong>Q:</strong> How to request help with a topic?<br><strong>A:</strong> Use the contact form below or message us directly.</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>🤝 Contact Us</h2>
+    <p>📧 Email: yourorgemail@example.com</p>
+    <p>📘 Facebook: <a href="#">facebook.com/yourorg</a></p>
+    <p>📝 Feedback Form: <a href="#">Submit here</a></p>
+  </section>
+
+  <section id="extras">
+    <h2>🧠 Bonus Features</h2>
+    <ul>
+      <li>📊 <strong>Polls / Surveys:</strong> Let members vote or give feedback</li>
+      <li>💬 <strong>Testimonial Section:</strong> “How this site helped me” stories</li>
+      <li>📝 <strong>Newsletter:</strong> Monthly blog posts with updates</li>
+      <li>🔐 <strong>Member Area:</strong> Officer-only pages or files</li>
+      <li>🌟 <strong>Featured Note:</strong> Highlight quality uploads weekly</li>
+    </ul>
+  </section>
+  
   <section id="upload">
     <h2>📤 Upload Your Notes</h2>
     <form id="uploadForm">
