--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <section id="officers">
     <h2>👥 Meet the Officers</h2>
     <ul>
-      <li><strong>📛 Name:</strong> Officer 1<br>📌 Position: President<br>📅 Term: 2024–2025<br>✉️ Email: officer1@example.com</li>
-      <li><strong>📛 Name:</strong> Officer 2<br>📌 Position: Vice President<br>📅 Term: 2024–2025<br>✉️ Email: officer2@example.com</li>
+      <li><strong>📛 Name:</strong> Niña Mae Boris<br>📌 Position: Governor<br>📅 Term: 2025–2026<br>✉️ Email: ninaboris923@gmail.com</li>
+      <li><strong>📛 Name:</strong> Fatima Balsa<br>📌 Position: Vice-Governor<br>📅 Term: 2025–2026<br>✉️ Email: officer2@example.com</li>
     </ul>
   </section>
 
